--- a/Reset/inventory.yml
+++ b/Reset/inventory.yml
@@ -4,7 +4,7 @@ all:
     CVP_cluster:
       vars:
           ansible_user: arista
-          ansible_password: PASSWORD-GOES-HERE
+          ansible_password: 2yxeq1haul5hvptg
           ansible_connection: httpapi
           ansible_httpapi_use_ssl: True
           ansible_httpapi_validate_certs: False
